# pypocketminer

./: .gitignore  CITATIONS.bib  LICENSE  README.md  README.qd  pyproject.toml
src/pypocketminer/: __init__.py  analyze.py  apply2AF.py  check_train_status.py  datasets.py  find_resubmit_incomplete.py  gvp.py  mapper_xtal_task2_v2.py  models.py  multiclass_auc.py  multiclass_train_fold.py  optimal_threshold_protein_performance.py  optuna_hyperparameter_scan.py  optuna_hyperparameter_scan_parallel.py  resubmit_failed.py  train_cpd.py  train_cryptic_labels.py  train_fold_pockets.py  train_fold_pockets_residue_batches.py  train_fpocket_drug_score_labels.py  train_pockets.py  train_regression_pockets.py  train_stability.py  train_xtal_predictor.py  util.py  utils.py  validate_performance_on_xtal_residues.py  validate_performance_on_xtals.py  xtal_predict_UI.py  xtal_prediction_notebook.ipynb
src/pypocketminer/models/: __init__.py  base.py  compat.py  cpd_model.py  gvp.py  mqa_model.py  utils.py
src/pypocketminer/models/features/: positional.py  structural.py
src/pypocketminer/models/layers/: gvp.py  mpnn_layer.py
tests/: test_balanced_inds.py  test_cpd_perplexity.py  test_cpd_recovery.py  test_performance_on_xtal_residues.py  test_sim_prediction.py
