[project]
name = "pypocketminer"
version = "0"
dependencies = [
  "numpy",
  "pandas",
  "mdtraj",
  "tqdm",
  "tensorflow"
]

[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"pypocketminer.models" = ["**/*"]
"pypocketminer.data" = ["**/*"]
